fix toggle bug audioplayer.js

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -690,7 +690,10 @@
                             <div class="knowledgeSection__accordionBox">
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Einlassregeln</h2>
-                                    <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
+                                    <div class="knowledgeSection__btnBox">
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                    </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
                                     <p class="knowledgeSection__text copy">
@@ -714,7 +717,10 @@
                             <div class="knowledgeSection__accordionBox">
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Zelten & Naturschutz</h2>
-                                    <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
+                                    <div class="knowledgeSection__btnBox">
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                    </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
                                     <p class="knowledgeSection__text copy">
@@ -738,7 +744,10 @@
                             <div class="knowledgeSection__accordionBox">
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Fragen & Antworten</h2>
-                                    <p class="knowledgeSection__choose btnTabsHeader">Mehr</p>
+                                    <div class="knowledgeSection__btnBox">
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                    </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
                                     <p class="knowledgeSection__text copy">
