refactoring html structure

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -583,50 +583,48 @@
                         </p>
 
                         <div class="lineUpSection__btnContainer">
-                            <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">FREITAG
-                            </button>
-                            <button class="lineUpSection__btn lineUpSection__btn--2 tabBtn btnTabsHeader">SAMSTAG
-                            </button>
-                            <button class="lineUpSection__btn lineUpSection__btn--3 tabBtn btnTabsHeader">SONNTAG
-                            </button>
-                        </div>
-
-
-                    </div>
-                    <div class="lineUpSection__scheduleContainer">
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
-                            <div class="lineUpSection__time btnTabsHeader">17.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">Kero Kero Bonito</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Girls Names</div>
-                        </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--2">
-                            <div class="lineUpSection__time btnTabsHeader">18.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Red Hot Chili Peppers
+                            <div class="lineUpSection__dayContainer">
+                                <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">FREITAG
+                                </button>
+                                <div class="lineUpSection__scheduleContainer">
+                                    <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
+                                        <div class="lineUpSection__time btnTabsHeader">17.00</div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">Hecht
+                                        </div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Kettcar
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Wu-Tang Clan</div>
+                            <div class="lineUpSection__dayContainer">
+                                <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">SAMSTAG
+                                </button>
+                                <div class="lineUpSection__scheduleContainer">
+                                    <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
+                                        <div class="lineUpSection__time btnTabsHeader">17.00</div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">The Killers
+                                        </div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">The Smashing Pumkins
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="lineUpSection__dayContainer">
+                                <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">SONNTAG
+                                </button>
+                                <div class="lineUpSection__scheduleContainer">
+                                    <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
+                                        <div class="lineUpSection__time btnTabsHeader">17.00</div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">The Streets
+                                        </div>
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">The Gaslight Anthem
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--3">
-                            <div class="lineUpSection__time btnTabsHeader">19.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Tompaul</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">3 Doors Down</div>
-                        </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--4">
-                            <div class="lineUpSection__time btnTabsHeader">20.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Lauryn Hill</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">Muse</div>
-                        </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--5">
-                            <div class="lineUpSection__time btnTabsHeader">21.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">The Horrors</div>
-                        </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--6">
-                            <div class="lineUpSection__time btnTabsHeader">22.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">Darkstar</div>
-                        </div>
-                        <div class="lineUpSection__timeBox lineUpSection__timeBox--7">
-                            <div class="lineUpSection__time btnTabsHeader">23.00</div>
-                            <div class="lineUpSection__groupBox lineUpSection__groupBox--1  lead">A=f/m</div>
-                        </div>
+
+
                     </div>
 
 
@@ -662,8 +660,10 @@
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Anreise & Rückreise</h2>
                                     <div class="knowledgeSection__btnBox">
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">
+                                            Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">
+                                            Weniger</p>
                                     </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer" id="lowerContainer">
@@ -691,8 +691,10 @@
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Einlassregeln</h2>
                                     <div class="knowledgeSection__btnBox">
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">
+                                            Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">
+                                            Weniger</p>
                                     </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
@@ -718,8 +720,10 @@
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Zelten & Naturschutz</h2>
                                     <div class="knowledgeSection__btnBox">
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">
+                                            Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">
+                                            Weniger</p>
                                     </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
@@ -745,8 +749,10 @@
                                 <div class="knowledgeSection__titleContainer">
                                     <h2 class="knowledgeSection__title">Fragen & Antworten</h2>
                                     <div class="knowledgeSection__btnBox">
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">Mehr</p>
-                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">Weniger</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseMore btnTabsHeader">
+                                            Mehr</p>
+                                        <p class="knowledgeSection__btn knowledgeSection__btn--chooseLess btnTabsHeader">
+                                            Weniger</p>
                                     </div>
                                 </div>
                                 <div class="knowledgeSection__lowerContainer">
