--- a/src/index.html
+++ b/src/index.html
@@ -489,35 +489,35 @@
                     die Samples an und entdecke deine Leidenschaft</p>
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--play"></button>
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button>
+                            <button class="discoverySection__musicBtn "></button>
+  <!--                          <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
                             <audio src=""></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
                         <div class="discoverySection__contBox">
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--play"></button>
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button>
+                            <button class="discoverySection__musicBtn "></button>
+                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
                         <div class="discoverySection__contBox">
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--play"></button>
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button>
+                            <button class="discoverySection__musicBtn "></button>
+                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
                         <div class="discoverySection__contBox">
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--play"></button>
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button>
+                            <button class="discoverySection__musicBtn "></button>
+                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
                             <audio src=""></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
                         <div class="discoverySection__contBox">
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--play"></button>
-                            <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button>
+                            <button class="discoverySection__musicBtn "></button>
+                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
                             <audio src=""></audio>
                         </div>
                     </div>
