add an mp3 to the audioplayer.js

--- a/src/index.html
+++ b/src/index.html
@@ -490,35 +490,30 @@
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
                             <button class="discoverySection__musicBtn "></button>
-  <!--                          <button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
-                            <audio src=""></audio>
+                            <audio class="sound" src="https://www.soundjay.com/button/beep-09.mp3"></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
-                            <audio src=""></audio>
+                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/midnight-ride-01a.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
-                            <audio src=""></audio>
+                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/jungle-run-01.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
-                            <audio src=""></audio>
+                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/heart-of-the-sea-01.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <!--<button class="discoverySection__musicBtn discoverySection__musicBtn--stop"></button> -->
-                            <audio src=""></audio>
+                            <audio class="sound" src="https://www.soundjay.com/ambient/sounds/spring-weather-1.mp3"></audio>
                         </div>
                     </div>
                 </div>
