build new function hideLineup

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -604,7 +604,7 @@
                                         <div class="lineUpSection__time btnTabsHeader">17.00</div>
                                         <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">The Killers
                                         </div>
-                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">The Smashing Pumkins
+                                        <div class="lineUpSection__groupBox lineUpSection__groupBox--2 lead">The Smashing Pumpkins
                                         </div>
                                     </div>
                                 </div>
