add class to one element

--- a/src/detailsite.html
+++ b/src/detailsite.html
@@ -586,7 +586,7 @@
                             <div class="lineUpSection__dayContainer">
                                 <button class="lineUpSection__btn lineUpSection__btn--1 tabBtn btnTabsHeader">FREITAG
                                 </button>
-                                <div class="lineUpSection__scheduleContainer">
+                                <div class="lineUpSection__scheduleContainer lineUpSection__scheduleContainer--show">
                                     <div class="lineUpSection__timeBox lineUpSection__timeBox--1">
                                         <div class="lineUpSection__time btnTabsHeader">17.00</div>
                                         <div class="lineUpSection__groupBox lineUpSection__groupBox--1 lead">Hecht
