--- a/src/index.html
+++ b/src/index.html
@@ -267,7 +267,7 @@
                     garantieren dir eine erlebnisreiche Festivalzeit
                 </h3>
                 <div class="titleSection__genres">
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--jazz">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="18px" version="1.1" viewBox="0 0 20 18" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -287,7 +287,7 @@
                         <span class="genreTitle">JAZZ</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--hiphop">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="23px" version="1.1" viewBox="0 0 20 23" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -307,7 +307,7 @@
                         <span class="genreTitle">HIPHOP</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--indie">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="15px" version="1.1" viewBox="0 0 20 15" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -327,7 +327,7 @@
                         <span class="genreTitle">INDIE</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--poprock">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="19px" version="1.1" viewBox="0 0 24 19" width="24px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -347,7 +347,7 @@
                         <span class="genreTitle">POP & ROCK</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--electronic">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="16px" version="1.1" viewBox="0 0 20 16" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
