--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -325,7 +325,7 @@
                     Festivals, Stars & Bands sowie Infos für einen genialen und unvergessenlichen Musiksommer.
                 </h3>
                 <div class="titleSection__genres">
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--jazz">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="18px" version="1.1" viewBox="0 0 20 18" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -345,7 +345,7 @@
                         <span class="genreTitle">JAZZ</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--hiphop">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="23px" version="1.1" viewBox="0 0 20 23" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -365,7 +365,7 @@
                         <span class="genreTitle">HIPHOP</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--indie">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="15px" version="1.1" viewBox="0 0 20 15" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -385,7 +385,7 @@
                         <span class="genreTitle">INDIE</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--poprock">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="19px" version="1.1" viewBox="0 0 24 19" width="24px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -405,7 +405,7 @@
                         <span class="genreTitle">POP & ROCK</span>
                         <span><sup>20</sup></span>
                     </button>
-                    <button class="titleSection__btnGenres">
+                    <button class="titleSection__btnGenres titleSection__btnGenres--electronic">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
                         <svg height="16px" version="1.1" viewBox="0 0 20 16" width="20px"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
